# spyice-thesis

./: .gitignore  README.md  README.rst  compare_plots_notebookin_script.py  comparison_plots.ipynb  main_config.py  pyproject.toml
.github/workflows/: ci.yml  documentation.yml
Meeting-Minutes/: 2024-09-09.md
docs/: genindex.html  modules.rst  searchindex.js  spyice.models.rst  spyice.parameters.rst  spyice.postprocess.rst  spyice.preprocess.rst  spyice.rst  spyice.utils.rst
docs/_sources/api/: spyice.main_process.rst.txt  spyice.models.algae_model.rst.txt  spyice.parameters.constants.rst.txt  spyice.parameters.rst.txt  spyice.postprocess.visualise_model.rst.txt  spyice.preprocess.geometry_settings.rst.txt  spyice.utils.config_sort.rst.txt  spyice.utils.helpers.rst.txt  spyice.utils.initial_userinput.rst.txt
docs/_sources/quick_start/: _index.rst.txt
docs/_sources/report/: introduction.rst.txt  problem_statement.rst.txt
docs/api/: spyice.main_process.html  spyice.models.sea_ice_model.html  spyice.models.stefan_problem.html  spyice.parameters.html  spyice.rhs.html  spyice.update_physical_values.html  spyice.utils.spyice_logger.html
docs/quick_start/example/: jupyter_run.html
docs/source/: conf.py  index.rst
docs/source/api/: _index.rst  spyice.coefficients.rst  spyice.models.rst  (+20 more)
docs/user_guide/: _index.html  jupyter_run copy.html
example/: example-0-quickstart.ipynb  example-1-heatsalttransport.ipynb  example-2-heatsalttransport-radiation.ipynb  example-3-heatsaltnutrienttransport-radiation-microalgae.ipynb  example_with_different_userinputs.ipynb  main_original.ipynb
example/conf/: config.yaml
html/: objects.inv
html/_modules/: index.html
html/api/: spyice.coefficients.html  spyice.models.advection_diffusion.html  spyice.models.algae_model.html  spyice.parameters.algae_constants.html  spyice.parameters.constants.html  spyice.parameters.debug_constants.html  spyice.parameters.results_params.html  spyice.postprocess.analysis.html  spyice.postprocess.html  spyice.preprocess.geometry_settings.html  spyice.preprocess.html  spyice.preprocess.initial_boundary_conditions.html  spyice.preprocess.modify_initial_boundary.html  spyice.preprocess.pre_process.html  spyice.statevariables.html  spyice.utils.create_directory.html  spyice.utils.error_norms.html  spyice.utils.initial_userinput.html
html/report/: _index.html  implementation.main_config.html  problem_statement.html
html/user_guide/: cmd_run.html  jupyter_run.html
jupyternotebooks/: algae_model.ipynb  algae_model_experimental.ipynb  comparison_plots.ipynb  enthalpy_study.ipynb  material_study.py  stefanproblem_analytical.ipynb
src/spyice/: __about__.py  __init__.py  coefficients.py  main_process.py  misc_subroutines.py  rhs.py  statevariables.py  update_physical_values.py
tests/: __init__.py  test_mainprocess.py  test_model_main.py  test_preprocess.py  test_userinput.py  test_userinput_new
(+159 files in other folders)
